# php-ref

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS  LICENSE  README.md  Vagrantfile  appveyor.yml  config.m4  config.w32  package.xml  php_ref.h  php_ref_functions.c  php_ref_functions.h  php_ref_notifier_exception.c  php_ref_notifier_exception.h  php_ref_reference.c  php_ref_reference.h  php_weak.h  php_weak_functions.c  php_weak_functions.h  php_weak_notifier_exception.c  php_weak_notifier_exception.h  php_weak_reference.c  php_weak_reference.h  ref.c  weak.c
provision/: .bashrc  provision.sh
provision/php/: weak.ini
scripts/: refresh-package-xml.php  replace_expect.php  subsplit.sh
shim/: LICENSE  README.md  composer.json  test.php
stubs/: LICENSE  README.md  composer.json
tests/: .stubs.php  .testsuite.php  001-extension-loaded.phpt  001-extension_info.phpt  001-verify-method-case.phpt  001-verify-methods-signature.phpt  001-verify_extension_entities.phpt  002-AbstracReference-may-not-be-subclassed-directly.phpt  002-AbstracReference-may-not-be-subclassed-indirectly.phpt  002-AbstractReference-basic.phpt  002-AbstractReference-clone.phpt  002-NotifierException-basic.phpt  002-WeakReference-basic.phpt  002-WeakReference-clone.phpt  002-WeakReference-clone_extended.phpt  002-WeakReference-closure.phpt  002-WeakReference-compare.phpt  002-WeakReference-die_in_dtor.phpt  002-WeakReference-dump_extended.phpt  002-WeakReference-exception-before-and-from-notifier.phpt  002-WeakReference-exception-before-notifier.phpt  002-WeakReference-exception_in_callback.phpt  (+118 more)
(+21 files in other folders)
